--- a/Connectome/Connectome.csproj
+++ b/Connectome/Connectome.csproj
@@ -48,6 +48,8 @@
     <Compile Include="Field\Area.cs" />
     <Compile Include="Field\Domain\CellInfomation.cs" />
     <Compile Include="Field\Domain\DomainCore.cs" />
+    <Compile Include="Field\Domain\Sensor\RandomPulser.cs" />
+    <Compile Include="Field\Domain\Sensor\SensorDomain.cs" />
     <Compile Include="Field\Domain\Transporter\SynapseConnection.cs" />
     <Compile Include="Field\Domain\Transporter\TransporterDomain.cs" />
     <Compile Include="Field\FieldCore.cs" />
@@ -64,7 +66,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Field\Domain\Sensor\" />
     <Folder Include="Gpgpu\Function\" />
     <Folder Include="Gpgpu\Shared\" />
     <Folder Include="Gpgpu\Source\" />
