--- a/ConnectomeVisualizer/ConnectomeVisualizer.csproj
+++ b/ConnectomeVisualizer/ConnectomeVisualizer.csproj
@@ -56,7 +56,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VisualizeObjects.cs" />
+    <Compile Include="Visualization.cs" />
     <EmbeddedResource Include="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
