--- a/Components/Components.csproj
+++ b/Components/Components.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Task.cs" />
     <Compile Include="Terminal.cs" />
     <Compile Include="GPGPU\Core.cs" />
     <Compile Include="GPGPU\Function\ComputeParameter.cs" />
